# storica

./: CMakeLists.txt  build.sh
include/: analyzer.hpp  cache.hpp  chapters.hpp  inspector.hpp  reader.hpp  tui.hpp  utils.hpp
src/: analyzer.cpp  cache.cpp  chapters.cpp  inspector.cpp  main.cpp  reader.cpp  tui.cpp  utils.cpp
